--- a/app.css
+++ b/app.css
@@ -178,11 +178,11 @@ header {
     border: 1px solid rgba(0, 0, 0, 0.05);
     border-radius: 0.25rem;
     box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.05);
+    transition: box-shadow 0.5s ease-in;
 }
 
 .project-item:hover {
     box-shadow: 10px 10px 10px 2px rgba(0, 0, 0, 0.1);
-    transition: 0.5s ease-in;
 }
 
 .project-item:last-of-type {
@@ -232,7 +232,9 @@ header {
 .project-image img {
     width: 100%;
     height: 100%;
-    border-radius: 0.25rem;
+    border-top-left-radius: .25rem;
+    border-top-right-radius: .25rem;
+    display: block;
 }
 
 .project-image:hover {
